Formatted each section to their own page + extra styling

--- a/contact.html
+++ b/contact.html
@@ -11,12 +11,11 @@
     </head>
     <body>
         <nav>
-            <h1>𝕋</h1>
-                <h2 class="hover-underline-animation"><a href="./index.html">Projects</a></h2>
-                <h2 class='hover-underline-animation'><a href="./index.html">About Me</a></h2>
-                <h2 class='hover-underline-animation' id="contact"><a href="./contact.html" target="_blank">Contact</a></h2>
+            <h1><a href="./index.html">𝕋</a></h1>
+                <h2 class="hover-underline-animation"><a href="./projects.html">Projects</a></h2>
+                <h2 class='hover-underline-animation'><a href="./aboutme.html">About Me</a></h2>
+                <h2 class='hover-underline-animation' id="contact"><a href="./contact.html">Contact</a></h2>
         </nav>
-
         <form action="https://formsubmit.co/bfa2f8265a8ff16ceae7f19983e64b27" method="POST" class="contact-form">
             <input type="text" name="name" placeholder='Name *' required>
             <input type="email" name="email" placeholder='Email *' required>
